data_url/data_url_20427.txt
I'm getting an error compiling the master branch on Mac Sierra 10.12.4. There are three unused functions, and the -Wunused-function flag causes the compiler to create a warning, which is then treated as an error.
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I../.. -I../../include -I. -g -std=gnu11 -Wno-unused-function -Werror -Wpedantic -Wall -Wextra -DCONSTANT_TIME -DAES_ENABLE_NI -g -O2 -MT libnewhope_la-newhope.lo -MD -MP -MF .deps/libnewhope_la-newhope.Tpo -c newhope.c -o libnewhope_la-newhope.o
newhope.c:53:13: error: unused function 'keygen' [-Werror,-Wunused-function]
static void keygen(unsigned char *send, poly *sk, OQS_RAND *rand) {
^
newhope.c:73:13: error: unused function 'sharedb' [-Werror,-Wunused-function]
static void sharedb(unsigned char *sharedkey, unsigned char *send,
^
newhope.c:106:13: error: unused function 'shareda' [-Werror,-Wunused-function]
static void shareda(unsigned char *sharedkey, const poly *sk,
^
3 errors generated.
make[2]: *** [libnewhope_la-newhope.lo] Error 1
make[1]: *** [all-recursive] Error 1
make: *** [all] Error 2
Hi mirathewhite, this should be fixed now.  Could you please download/update to the current master branch, and let us know if the issue is resolved?
Fixed.  I did a clean build on my machine. @dstebila.
